--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div id="mobile-menu">
-            <a href="#"> <i class="fas fa-shopping-cart"></i></a>
+            <!-- <a href="#"> <i class="fas fa-shopping-cart"></i></a> -->
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -421,7 +421,7 @@
         </div>
 
     </footer>
-
+<script src="script.js"></script>
     
 </body>
 </html>
